Refactoring to use interfaces
